# git_view

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  README.md  cmake_install.cmake
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cmake/: git_view_version.h.in
debian/: changelog  control  copyright  postinst  postrm  rules
integrations/: CMakeLists.txt  install-nautilus-integration.sh
integrations/nautilus/: git_view_nautilus.py  integration.conf.in  nautilus-action.sh  resolve-git_view-bin.sh  run-git_view.sh  uri_to_path.py
integrations/nautilus/scripts/: _git_view_action.sh  commit-changes  fetch  open-in-git_view  pull  push  show-file-diff  show-file-history  show-log  show-working-changes
packaging/: build-deb.sh  build-macos.sh  git_view.desktop  install-dev-desktop.sh  read-version.sh  sync-debian-version.sh  verify-macos-app-version.sh
resources/: git_view.qrc
resources/icons/: render_icon.py
src/: AppLaunchOptions.cpp  AppLaunchOptions.h  CMakeLists.txt  cmake_install.cmake  main.cpp
src/core/: Branch.cpp  Branch.h  Commit.cpp  Commit.h  CommitDetails.cpp  CommitDetails.h  GitRemote.h  GraphLayout.cpp  GraphLayout.h  Repo.cpp  Repo.h  Tag.h  WorkingTreeChange.cpp  WorkingTreeChange.h
src/git/: DiffParser.cpp  DiffParser.h  GitProcessRunner.cpp  GitProcessRunner.h  GitService.cpp  GitService.h  LogParser.cpp  LogParser.h  PathUtils.cpp  PathUtils.h  StatusParser.cpp  StatusParser.h
src/ui/: CodeSyntax.cpp  CodeSyntax.h  CommitDetailsDialog.cpp  CommitDetailsDialog.h  CommitDetailsPanel.cpp  CommitDetailsPanel.h  CommitGraphWidget.cpp  CommitGraphWidget.h  CommitHistoryView.cpp  CommitHistoryView.h  DialogTitleBar.cpp  DialogTitleBar.h  DiffDisplay.h  DiffHighlighter.cpp  DiffHighlighter.h  DiffViewerDialog.cpp  DiffViewerDialog.h  DiffViewerWidget.cpp  DiffViewerWidget.h  EditorTheme.cpp  EditorTheme.h  FileHistoryDialog.cpp  FileHistoryDialog.h  MainWindow.cpp  MainWindow.h  PtySession.cpp  PtySession.h  RemotesDialog.cpp  RemotesDialog.h  RepoTerminalPanel.cpp  RepoTerminalPanel.h  SourceChangeHighlighter.cpp  SourceChangeHighlighter.h  SourceCodeView.cpp  SourceCodeView.h  TopLevelDialogUtils.h  VtermTerminalWidget.cpp  VtermTerminalWidget.h  WorkingChangesPanel.cpp  WorkingChangesPanel.h  (+2 more)
tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  test_diff_parser.cpp  test_git_staged_diff.cpp  test_graph_layout.cpp  test_live_staged.cpp  test_log_parser.cpp  test_status_parser.cpp
tests/fixtures/: create_fixture_repo.sh
